--- a/worker/index.html
+++ b/worker/index.html
@@ -6,17 +6,21 @@
 </head>
 <body>
 <script>
-var i = setInterval(function () {
+function run() {
   console.log('running..');
-}, 200);
+}
 
+var i = setInterval(run, 200);
 var worker = new Worker('worker.js');
+
 worker.postMessage('hello world');
 worker.onmessage = function (event) {
   console.log('main onmessage:', event.data);
   clearInterval(i);
   i = null;
 }
+
+run();
 </script>
 </body>
 </html>
