--- a/worker/index.html
+++ b/worker/index.html
@@ -13,7 +13,7 @@ function run() {
 var i = setInterval(run, 200);
 var worker = new Worker('worker.js');
 
-worker.onmessage = function (event) {
+/*worker.onmessage = function (event) {
   console.log('main onmessage:', event.data);
   
   clearInterval(i);
@@ -25,7 +25,7 @@ worker.onerror = function(e){
     console.log(e.message);
     worker.terminate();
 };
-worker.postMessage('hello world');
+worker.postMessage('hello world');*/
 
 run();
 </script>
