--- a/worker/index.html
+++ b/worker/index.html
@@ -20,7 +20,7 @@ worker.onmessage = function (event) {
   i = null;
 }
 worker.onerror = function(e){
-    console.log(e);
+    console.log(e.message, e.filename, e.lineno);
     worker.terminate();
 };
 worker.postMessage('hello world');
