--- a/shared-worker/index.html
+++ b/shared-worker/index.html
@@ -13,10 +13,10 @@ worker.port.onmessage = function (event) {
 }
 worker.onerror = function(e){
     console.log(e.message, e.filename, e.lineno);
-    worker.port.terminate();
+    worker.terminate();
 };
 // worker.port.start();
-console.log(worker.port);
+console.log(worker);
 worker.port.postMessage('hello world');
 </script>
 </body>
