--- a/shared-worker/index.html
+++ b/shared-worker/index.html
@@ -16,6 +16,7 @@ worker.onerror = function(e){
 };
 // worker.port.start();
 worker.port.postMessage('hello world');
+alert(1)
 </script>
 </body>
 </html>
