--- a/shared-worker/index.html
+++ b/shared-worker/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-var worker = new Worker('worker.js');
+var worker = new SharedWorker('worker.js');
 
 worker.port.onmessage = function (event) {
   console.log('main onmessage:', event.data);  
@@ -16,7 +16,7 @@ worker.onerror = function(e){
 };
 // worker.port.start();
 worker.port.postMessage('hello world');
-alert(2)
+alert(3);
 </script>
 </body>
 </html>
