--- a/shared-worker/index.html
+++ b/shared-worker/index.html
@@ -14,7 +14,7 @@ worker.port.onmessage = function (event) {
 worker.onerror = function(e){
     console.log(e.message, e.filename, e.lineno);
 };
-// worker.port.start();
+worker.port.start();
 worker.port.postMessage('hello world');
 </script>
 </body>
