--- a/shared-worker/index.html
+++ b/shared-worker/index.html
@@ -5,7 +5,7 @@
 <title>shared worker demo</title>
 </head>
 <body>
-3
+4
 <script>
 var worker = new SharedWorker('worker.js');
 
@@ -15,7 +15,7 @@ worker.port.onmessage = function (event) {
 worker.onerror = function(e){
     console.log(e.message, e.filename, e.lineno);
 };
-// worker.port.start();
+worker.port.start();
 worker.port.postMessage('hello world');
 </script>
 </body>
