--- a/shared-worker/index.html
+++ b/shared-worker/index.html
@@ -5,9 +5,9 @@
 <title>shared worker demo</title>
 </head>
 <body>
-3
+4
 <script>
-var worker = new SharedWorker('worker.js');
+var worker = new SharedWorker('worker.js' + '?t=' + new Date.getTime());
 
 worker.port.onmessage = function (event) {
   console.log('main onmessage:', event.data);
