--- a/shared-worker/index.html
+++ b/shared-worker/index.html
@@ -5,10 +5,10 @@
 <title>shared worker demo</title>
 </head>
 <body>
-加数1： <input type="number" onChange="onChangeHandler(this.value)" />
+加数1： <input type="number" onchange="onChangeHandler(this.value)" />
 <div id="result"></div>
 <script>
-var worker = new SharedWorker('worker.js');
+var worker = new SharedWorker('worker.js', 'sharedWorker');
 worker.port.onmessage = event => {
   result.innerHTML = '计算：' + event.data;
 }
