--- a/service-worker/index.html
+++ b/service-worker/index.html
@@ -5,15 +5,21 @@
 <title>worker demo</title>
 </head>
 <body>
-1
+<div id="container"></div>
 <script>
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('worker.js', {
     scope: '/service-worker/',
   }).then(reg => {
-    console.log(reg);
+    if(reg.installing) {
+      console.log('Service worker installing');
+    } else if(reg.waiting) {
+      console.log('Service worker installed');
+    } else if(reg.active) {
+      console.log('Service worker active');
+    }
   }).catch(err => {
-    console.log(err);
+    console.log('Registration failed with ' + error);
   });
 }
 </script>
