--- a/service-worker/index.html
+++ b/service-worker/index.html
@@ -19,7 +19,7 @@ if ('serviceWorker' in navigator) {
       console.log('Service worker active');
     }
   }).catch(err => {
-    console.log('Registration failed with ' + error);
+    console.log('Registration failed with ' + err);
   });
 }
 </script>
