--- a/service-worker/index.html
+++ b/service-worker/index.html
@@ -22,6 +22,16 @@ if ('serviceWorker' in navigator) {
     console.log('Registration failed with ' + err);
   });
 }
+
+fetch('https://os.alipayobjects.com/rmsportal/hVsghLyuoDyZovLGhSxl.json').then(res => {
+  return res.json();
+}).then(res => {
+  if (res.status === 'success') {
+    document.querySelector('#container').innerHTML = res.data;
+  }
+}).catch(err => {
+  console.log(err);
+});
 </script>
 <script src="common.js"></script>
 </body>
