--- a/service-worker/offline.html
+++ b/service-worker/offline.html
@@ -5,6 +5,6 @@
 <title>worker demo</title>
 </head>
 <body>
-<font color="red">我是网络不通时的兜底的页面</font>
+<font color="red">我是网络不通时的离线页面</font>
 </body>
 </html>
