--- a/service-worker/index.html
+++ b/service-worker/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>worker demo</title>
+<title>service worker demo</title>
 </head>
 <body>
 <div id="container"></div>
