--- a/service-worker/offline.html
+++ b/service-worker/offline.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>worker demo</title>
+<title>service worker demo</title>
 </head>
 <body>
 <font color="red">我是网络不通时的离线页面</font>
